# django_sample

./: .dockerignore  .env.ci  .gitignore  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  manage.py  nginx.conf  pyproject.toml
.github/: .env.ci
.github/actions/setup-python-poetry/: action.yml
.github/workflows/: workflow.yml
config/: celery.py  settings.py  urls.py
config/settings/: __init__.py  base.py  celery.py  email.py  logging.py
mailing/: forms.py  models.py  tasks.py  urls.py  views.py
mailing/migrations/: 0001_create_mailing_model.py
mailing/templates/: base.html
mailing/templates/inc/: messages.html
mailing/templates/mailing/: send_mail.html
mailing/tests/: test_tasks.py  test_views.py
templates/inc/: form_field.html  form_field_errors.html
