[project]
name = "config"
version = "0.1.0"
description = ""
authors = [
    {name = "Vadim Meshcheryakov",email = "painassasin@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.5,<6.0.0)",
    "environs (>=14.3.0,<15.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)"
]

[tool.poetry]
packages = []


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
